fix: fix display of the HorizontalScrollbar on the small screens

--- a/src/components/Main/Home/Home.module.css
+++ b/src/components/Main/Home/Home.module.css
@@ -94,6 +94,10 @@
   .home_page_subtitle {
     font-size: 1.9rem;
   }
+
+  .home_page {
+    padding: 1rem;
+  }
 }
 
 @media screen and (max-width: 540px) {
